<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_farmers"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".LanguageSelectionActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:contentDescription="@string/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/splash_screen_logo" />

    <TextView
        android:id="@+id/txt_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="35sp"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txt_choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language_selection"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        android:shadowColor="@color/white"
        android:layout_margin="25dp"
        android:layout_gravity="center"/>

    <LinearLayout
        android:id="@+id/LL_English"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:background="@drawable/bg_language_selection"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:contentDescription="@string/english"
            android:layout_marginStart="100dp"
            android:src="@drawable/usa" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LL_Hindi"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:background="@drawable/bg_language_selection"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hindi"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:contentDescription="@string/english"
            android:layout_marginStart="150dp"
            android:src="@drawable/india" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LL_Gujarati"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:background="@drawable/bg_language_selection"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gujarati"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:contentDescription="@string/english"
            android:layout_marginStart="100dp"
            android:src="@drawable/gujarat" />
</LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_continue"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:background="@drawable/bg_button"
        android:text="@string/Continue"
        android:enabled="false"/>
</LinearLayout>
